--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>AngularFrontEndLibrary</title>
-  <base href="/">
+  <base href="/angular-frontEndLibrary/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="src/styles.css">  -->
 </head>
 <body>
   <app-root></app-root>
