--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>AngularFrontEndLibrary</title>
-  <base href="/angular-frontEndLibrary/">
+  <!-- <base href="/angular-frontEndLibrary/"> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
